@@ -1,5 +1,13 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int C] Use GCC attributes individually.
+
+	* b-complain.h (generic_fatal, fatl_syntax): Use attribute
+	declarations `printf_string' and `exiting' directly.
+	* base.h (printf_string_exiting): Delete macro.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int C] Move #include <utime.h> to .c files.
 
 	* base.h: Don't #include <utime.h>; remove surrounding
